// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalCommonOptions IdPrefix 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="prefix-sample"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <input
      class="form-control"
      id="prefix-sample"
      type="text"
    />
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`AdditionalCommonOptions Nested バリデーションエラー 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample.1.sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <input
      class="form-control is-invalid"
      id="sample.1.sample_field"
      type="text"
    />
    <!---->
    <!---->
    <div
      class="invalid-feedback"
    >
      エラーです
    </div>
    <!---->
  </div>
</div>
`;

exports[`AdditionalCommonOptions Nested 通常 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample.1.sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <input
      class="form-control"
      id="sample.1.sample_field"
      type="text"
    />
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;
